data/diff_tests/wasmtime/call_UnreachableCodeExecution_3288.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\89\80\80\80\00\02\60"
    "\02\7f\7f\00\60\00\00\02\99\80\80\80\00\01\03\65"
    "\6e\76\11\6e\6f\6e\5f\65\78\69\73\74\65\6e\74\5f"
    "\66\75\6e\63\00\00\03\82\80\80\80\00\01\01\0a\8e"
    "\80\80\80\00\01\88\80\80\80\00\00\41\00\41\00\10"
    "\00\0b"
  )
""
)